<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Polite Droid</string>
    <string name="options_enabled">Enabled</string>
    <string name="options_enabled_summary">Activate silent mode during calendar events</string>
    <string name="options_settings">Settings</string>
    <string name="options_calendars">Calendars</string>
    <string name="options_calendars_summary">Select calendars</string>
    <string name="options_events_all_day">All day events</string>
    <string name="options_events_all_day_summary">Activate during all day events</string>
    <string name="options_events_busy">Busy events only</string>
    <string name="options_events_busy_summary">Only activate for busy events</string>
    <string name="options_vibrate">Phone vibrate</string>
    <string name="options_vibrate_summary">Allow phone to vibrate when silenced</string>
    <string name="options_update_interval">Update interval</string>
    <string name="options_update_interval_summary">Interval between checks for new events</string>
</resources>
